# farmer_market

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 04b4e9f969f1_initial_migration.py  0c4ec9e5e354_first_migration.py  144814e9b249_cart.py  1a0d0d69b4e9_fist_migration.py  1ea2413bd86a_is_approved.py  225865a4012e_add_description_to_product_model.py  5983eb8a3353_user_table_username_fullname.py  7ff36c4fed98_fist_migration.py  8eb829de6955_edited_dimash_s_stupid_errors.py  c7dd747a06fd_is_approved_true_by_deafult.py  d6a4bad9a9d9_first_migration.py  e4b7edb1c67b_verification_code.py
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  cart.py  chat.py  checkout.py  comments.py  orders.py  products.py  profiles.py  webhook.py
backend/app/database/: database.py  models.py
backend/app/repositories/: buyers.py  cart.py  chat.py  comments.py  farmers.py  orders.py  products.py  users.py
backend/app/schemas/: buyers.py  cart.py  chat.py  comments.py  farmers.py  orders.py  password_reset.py  products.py  users.py  verification_code.py
backend/app/utils/: code_generator.py  connection_manager.py  email_utils.py  file_upload.py  security.py
backend/tests/: conftest.py  test_auth.py  test_comments.py  test_db  test_products.py  test_profiles.py
flutter/: README.md  pubspec.yaml
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt  my_application.cc
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
proj/: pubspec.yaml
(+129 files in other folders)
