[tool.poetry]
name = "farmer-market"
version = "0.1.0"
description = ""
authors = ["Dinmukhamed Albek <<dimalbek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.0"
alembic = "^1.13.3"
pytz = "^2024.2"
pydantic-extra-types = "^2.9.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
phonenumbers = "^8.13.47"
pydantic = { version = "^2.9.2", extras = ["email"] }
python-multipart = "^0.0.12"
bcrypt = "^4.2.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
fastapi-mail = "^1.4.2"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
